--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,7 +33,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: '^/service', roles: [IS_AUTHENTICATED_FULLY] }
+        - { path: '^/service', roles: [IS_AUTHENTICATED_FULLY,ROLE_USER] }
+        - { path: '^/user', roles: [IS_AUTHENTICATED_FULLY,ROLE_USER] }
         # - { path: ^/profile, roles: ROLE_USER }
     role_hierarchy:
         ROLE_EDITOR: ROLE_USER
